--- a/about.html
+++ b/about.html
@@ -421,7 +421,7 @@ blockquote,
                 </div>
                 <div class="row">
                   <div class="job-details col-xs-11">
-                    <div class="profession">Technology Lead</div>
+                    <div class="profession">Technology Architect</div>
                     <div class="description">
                       Infosys is a global leader in consulting, technology and next-generation services.  We started as just seven engineers with $250 in start-up funds. Today we’re more than 194,000 people and some $9 billion strong.
                       <div class="highlights">Highlights</div>
@@ -541,7 +541,7 @@ blockquote,
                   <p><i class= "fa fa-graduation-cap ico"></i> B.Tech (IT)</p>
                   <p>Information Technology</p>
                   <p>
-                    GPA: 4.0
+                    CGPA: 7.0
                   </p>
                 </div>
               </li>
