Updated personal projects

--- a/about.html
+++ b/about.html
@@ -525,6 +525,11 @@ blockquote,
               <div class="title only pull-right"><a href="http:&#x2F;&#x2F;ranjithnair.github.io" target="_blank">http:&#x2F;&#x2F;ranjithnair.github.io</a></div>
             </div>
             <div class="contact-item">
+              <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
+              <div class="title pull-right">Twitter</div>
+              <div class="description pull-right"><a href="https://twitter.com/ranjith_m" target="_blank">@ranjith_m</a></div>
+            </div>
+            <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-linkedin fa-fw"></span></div>
               <div class="title pull-right">Linkedin</div>
               <div class="description pull-right"><a href="https:&#x2F;&#x2F;www.linkedin.com&#x2F;in&#x2F;ranjith-nair-7b540242&#x2F;" target="_blank">ranjith-nair-7b540242</a></div>
@@ -679,6 +684,28 @@ blockquote,
                 <div class="publisher"><i class= "fa fa-bookmark ico"></i> Firebase app for managing feature releases within a scrum agile team.</div>
                 <div class="address">
                   <a href="https://featurestracker.herokuapp.com" target="_blank"><i class="fa fa-globe ico"></i> https://featurestracker.herokuapp.com</a>
+                </div>
+              </div>
+            </div>
+            <div class="publication panel panel-default">
+              <div class="panel-heading">
+                <div class="name panel-title">Rupval</div>
+              </div>
+              <div class="panel-body">
+                <div class="publisher"><i class= "fa fa-bookmark ico"></i> Puppeteer script to find USD-INR conversion rate from various services</div>
+                <div class="address">
+                  <a href="https://github.com/RanjithNair/rupval" target="_blank"><i class="fa fa-globe ico"></i> https://github.com/RanjithNair/rupval</a>
+                </div>
+              </div>
+            </div>
+            <div class="publication panel panel-default">
+              <div class="panel-heading">
+                <div class="name panel-title">Docflow</div>
+              </div>
+              <div class="panel-body">
+                <div class="publisher"><i class= "fa fa-bookmark ico"></i> Progressive Webapp to handle document management</div>
+                <div class="address">
+                  <a href="https://github.com/RanjithNair/docflow" target="_blank"><i class="fa fa-globe ico"></i> https://rjdocflow.firebaseapp.com</a>
                 </div>
               </div>
             </div>
